# trl

./: README.md  auto_shutdown.sh  pyproject.toml  requirements.txt  setup.sh
docker/trl/: Dockerfile
docker/trl-dev/: Dockerfile
examples/accelerate_configs/: single_gpu.yaml
examples/cli_configs/: reward_full_config.yaml  reward_lora_config.yaml
examples/scripts/: README.md  router_trainer.py
scripts/: compare_reward_models.py
