[project]
name = "local-trl-experiments"
version = "0.1.0"
description = "Local experiments using Hugging Face TRL"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.4.0",
    "datasets>=3.0.0",
    "hf-transfer>=0.1.9",
    "langchain-openai>=1.0.1",
    "math-verify>=0.8.0",
    "peft>=0.17.1",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
    "scikit-learn>=1.5.0",
    "transformers>=4.56.1",
    "vllm>=0.11.0",
    "wandb>=0.22.3",
]

[dependency-groups]
dev = [
    "trl>=0.24.0",
]
